<resources>
    <string name="app_name">Encyclopedia</string>
    <string name="planet_encyclopedia">PLANET ENCYCLOPEDIA</string>
    <string name="go">GO</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="Earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="pluto">Pluto </string>
    <string name="abc">
                  Powered By
        🚀🌎👽🛰🌔🌌🔭🛸👨🏽‍🚀</string>
    <string name="search">SEARCH</string>
    <string name="todo">TODO</string>
    <string name="go_back_to_main_page">GO BACK TO MAIN PAGE</string>
</resources>