<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:background="#FDFFEE"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mercurySc"
        android:text="@string/mercury"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mercuryBtn"
        android:layout_marginTop="80dp"
        android:layout_marginStart="0dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/VenusSc"
        android:text="@string/venus"
        android:layout_marginTop="40dp"
        android:layout_marginStart="270dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/VenusBtn"
        android:layout_marginTop="80dp"
        android:layout_marginStart="270dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/EarthSc"
        android:text="@string/Earth"
        android:layout_marginTop="140dp"
        android:layout_marginStart="0dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EarthBtn"
        android:layout_marginTop="180dp"
        android:layout_marginStart="0dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/MarsSc"
        android:text="@string/mars"
        android:layout_marginTop="140dp"
        android:layout_marginStart="270dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MarsBtn"
        android:layout_marginTop="180dp"
        android:layout_marginStart="270dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/JupiterSc"
        android:text="@string/jupiter"
        android:layout_marginTop="240dp"
        android:layout_marginStart="0dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/JupiterBtn"
        android:layout_marginTop="290dp"
        android:layout_marginStart="0dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/SaturnSc"
        android:text="@string/saturn"
        android:layout_marginTop="240dp"
        android:layout_marginStart="270dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SaturnBtn"
        android:layout_marginTop="290dp"
        android:layout_marginStart="270dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/UranusSc"
        android:text="@string/uranus"
        android:layout_marginTop="340dp"
        android:layout_marginStart="0dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UranusBtn"
        android:layout_marginTop="380dp"
        android:layout_marginStart="0dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/NeptuneSc"
        android:text="@string/neptune"
        android:layout_marginTop="340dp"
        android:layout_marginStart="270dp"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NeptuneBtn"
        android:layout_marginTop="380dp"
        android:layout_marginStart="270dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/PlutoSc"
        android:text="@string/pluto"
        android:layout_marginTop="440dp"
        android:layout_marginStart="150dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/PlutoBtn"
        android:layout_marginTop="480dp"
        android:layout_marginStart="145dp"
        android:text="@string/go"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/powerSc"
        android:text="@string/abc"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="600dp"
        android:layout_marginStart="40dp"
        />
</RelativeLayout>